--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: julia
 os:
   - linux
 julia:
-  - 0.6
+  - 1.0
 notifications:
   email: false
 git:
@@ -19,8 +19,8 @@ sudo: required
 
 # Before anything else, get the latest versions of things
 before_script:
-  - julia -e 'Pkg.clone("https://github.com/JuliaPackaging/BinaryProvider.jl")'
-  - julia -e 'Pkg.clone("https://github.com/JuliaPackaging/BinaryBuilder.jl"); Pkg.build()'
+  - julia -e 'using Pkg; Pkg.add("BinaryProvider")'
+  - julia -e 'using Pkg; Pkg.add(PackageSpec(url="https://github.com/JuliaPackaging/BinaryBuilder.jl", rev="master")); Pkg.build()'
 
 script:
   - julia build_tarballs.jl
@@ -32,5 +32,5 @@ deploy:
   file: products/*
   skip_cleanup: true
   on:
-    repo: Gnimuc/FreeTypeBuilder
+    repo: JuliaGraphics/FreeTypeBuilder
     tags: true
